<resources>
    <string name="app_name">Pawmate3</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signUp">"<u>Sorry I'm new.</u>"</string>
    <string name="forgotPw">"<u>I forgot something please let me in.</u>"</string>
    <string name="exp1">"<u>Who are you people?</u>"</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="sex_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="date_arrays">
        <item>Years</item>
        <item>Months</item>
        <item>Days</item>
    </string-array>

</resources>
